--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           See what our satisfied customers are saying about our services.</p>
       </div>
       <div class="ratings">
-        <div class="rating-box reviews">
+        <div class="rating-box">
           <div class="stars">
             <img src="images/icon-star.svg" alt="star">
             <img src="images/icon-star.svg" alt="star">
@@ -43,7 +43,7 @@
           </div>
           <p>Rated 5 Stars in Reviews</p>
         </div>
-        <div class="rating-box report-guru">
+        <div class="rating-box">
           <div class="stars">
             <img src="images/icon-star.svg" alt="star">
             <img src="images/icon-star.svg" alt="star">
@@ -53,7 +53,7 @@
           </div>
           <p>Rated 5 Stars in Report Guru</p>
         </div>
-        <div class="rating-box best-tech">
+        <div class="rating-box">
           <div class="stars">
             <img src="images/icon-star.svg" alt="star">
             <img src="images/icon-star.svg" alt="star">
