--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
+    <div class="image-container"></div>
     <div class="container">
       <div class="description">
-        <h1>10,000+ of our users love our products.</h1>
+        <h1 class="large-text">10,000+ of our users love our products.</h1>
         <p>We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
       </div>
