--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="description">
         <h1 class="large-text">10,000+ of our users love our products.</h1>
-        <p>We only provide great products combined with excellent customer service.
+        <p class="desc-text">We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
       </div>
       <div class="ratings">
