--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body>
-    <div class="image-container"></div>
     <div class="container">
       <div class="description">
         <h1 class="large-text">10,000+ of our users love our products.</h1>
@@ -59,8 +58,10 @@
       <div class="testimonial-box colton">
         <div class="buyer">
           <img src="images/image-colton.jpg" alt="guy facing sidewards">
-          <p>Colton Smith</p>
-          <p class="verified-buyer">Verified Buyer</p>
+          <div class="buyer-info">
+            <p>Colton Smith</p>
+            <p class="verified-buyer">Verified Buyer</p>
+          </div>
         </div>
         <p>
           "We needed the same printed design as the one we had ordered a week prior.
@@ -71,8 +72,10 @@
       <div class="testimonial-box irene">
         <div class="buyer">
           <img src="images/image-irene.jpg" alt="guy facing sidewards">
+          <div class="buyer-info">
           <p>Irene Roberts </p>
           <p class="verified-buyer">Verified Buyer</p>
+        </div>
         </div>
         <p>
           "Customer service is always excellent and very quick turn around. Completely
@@ -82,8 +85,10 @@
       <div class="testimonial-box anne">
         <div class="buyer">
           <img src="images/image-anne.jpg" alt="guy facing sidewards">
+          <div class="buyer-info">
           <p>Anne Wallace</p>
           <p class="verified-buyer">Verified Buyer</p>
+          </div>
         </div>
         <p>
           "Put an order with this company and can only praise them for the very high
@@ -91,5 +96,6 @@
         </p>
       </div>
     </div>
+    
   </body>
 </html>
